name:                deep-banana
version:             0.1.0.0
synopsis:            A GPU accelerated deep learning library.
description:         Please see README.md
homepage:            https://github.com/alexisVallet/hnn
license:             BSD3
license-file:        LICENSE
author:              Alexis Vallet
maintainer:          alexis.vallet@gmail.com
-- copyright:           
category:            Machine learning
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     DeepBanana
                     , DeepBanana.Layer
                     , DeepBanana.Layer.CUDA
                     , DeepBanana.Layer.CUDA.Monad
                     , DeepBanana.Layer.CUDA.CuDNN
                     , DeepBanana.Layer.CUDA.Cublas
                     , DeepBanana.Layer.CUDA.CuRAND
                     , DeepBanana.Layer.CUDA.Numeric
                     , DeepBanana.Tensor
                     , DeepBanana.Tensor.TensorScalar
                     , DeepBanana.Tensor.Shape
                     , DeepBanana.Tensor.Mutable
                     , DeepBanana.Optimize
                     , DeepBanana.Data
                     , DeepBanana.Cubits
  build-depends:       base >= 4.7 && < 5
                     , cuda >= 0.6.5 && < 0.7
                     , hcudnn >= 0.1 && < 0.2
                     , hcurand >= 0.1 && < 0.2
                     , mtl >= 2.1 && < 2.3
                     , primitive >= 0.6 && < 0.7
                     , cublas >= 0.2.1 && < 0.3
                     , vector-space >= 0.9 && < 0.11
                     , friday >= 0.2 && < 0.3
                     , friday-devil >= 0.1 && < 0.2
                     , pipes >= 4.1 && < 4.2
                     , directory >= 1.2 && < 1.3
                     , filepath >= 1.3 && < 1.4
                     , vector >= 0.10 && < 0.11
                     , MonadRandom >= 0.3 && < 0.4
                     , mmorph >= 1.0 && < 1.1
                     , cereal >= 0.4 && < 0.5
                     , bytestring >= 0.10 && < 0.11
                     , deepseq >= 1.3 && < 1.4
                     , time >= 1.4 && < 1.5
                     , HList >= 0.4 && < 0.5
  default-language:    Haskell2010
  default-extensions:  ScopedTypeVariables
                     , TypeFamilies
                     , DataKinds
                     , TypeOperators
                     , PolyKinds
                     , FlexibleContexts
                     , FlexibleInstances
  Extra-libraries:     hnn_cubits
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

test-suite deep-banana-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Test.DeepBanana.Layer.CUDA
                     , Test.DeepBanana.Layer.NumericGrad
  build-depends:       base >= 4.7 && < 5
                     , deep-banana >= 0.1 && < 0.2
                     , hcudnn >= 0.1 && < 0.2
                     , hcurand >= 0.1 && < 0.2
                     , hspec >= 2.1 && < 2.2
                     , vector-space >= 0.9 && < 0.11
                     , mtl >= 2.1 && < 2.3
                     , HList >= 0.4
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  extensions:          ScopedTypeVariables
                     , TypeFamilies
                     , DataKinds
                     , TypeOperators
                     , PolyKinds
                     , FlexibleContexts
                     , FlexibleInstances

-- executable example-mnist
--   hs-source-dirs:      examples/mnist/
--   main-is:             Main.hs
--   default-language:    Haskell2010
--   build-depends:       base >= 4.7 && < 5
--                      , hnn >= 0.1 && < 0.2
--                      , filepath >= 1.3 && < 1.4
--                      , pipes >= 4.1 && < 4.2
--                      , friday >= 0.2 && < 0.3
--                      , vector-space >= 0.9 && < 0.10
--                      , vector >= 0.10 && < 0.11
--                      , directory >= 1.2 && < 1.3
--                      , leveldb-haskell >= 0.6
--                      , resourcet >= 1.1
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N

source-repository head
  type:     git
  location: https://github.com/alexisVallet/hnn
