name:                deep-banana
version:             0.1.0.0
synopsis:            A GPU accelerated deep learning library.
description:         Please see README.md
homepage:            https://github.com/alexisVallet/hnn
license:             BSD3
license-file:        LICENSE
author:              Alexis Vallet
maintainer:          alexis.vallet@gmail.com
-- copyright:           
category:            Machine learning
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     DeepBanana
                     , DeepBanana.Layer
                     , DeepBanana.Layer.CUDA
                     , DeepBanana.Layer.CUDA.Exception
                     , DeepBanana.Layer.CUDA.CuDNN
                     , DeepBanana.Layer.CUDA.CuDNN.Exception
                     , DeepBanana.Layer.CUDA.Cublas
                     , DeepBanana.Layer.CUDA.CuRAND
                     , DeepBanana.Layer.CUDA.Numeric
                     , DeepBanana.Layer.CUDA.Monad
                     , DeepBanana.Layer.Recurrent
                     , DeepBanana.Layer.Recurrent.Exception
                     , DeepBanana.Layer.LSTM
                     , DeepBanana.Tensor
                     , DeepBanana.Tensor.Exception
                     , DeepBanana.Tensor.TensorScalar
                     , DeepBanana.Tensor.Shape
                     , DeepBanana.Tensor.Mutable
                     , DeepBanana.Optimize
                     , DeepBanana.Prelude
                     , DeepBanana.Data
                     , DeepBanana.Data.Exception
                     , DeepBanana.Exception
                     , DeepBanana.HList
                     , DeepBanana.Weights
                     , DeepBanana.Device
                     , DeepBanana.Device.Cubits
                     , DeepBanana.Device.CuDNN
                     , DeepBanana.Device.CuRAND
                     , DeepBanana.Device.Monad
  build-depends:       base >= 4.7
                     , cuda >= 0.7
                     , transformers >= 0.4
                     , mtl >= 2.1
                     , primitive >= 0.6
                     , cublas >= 0.2.1
                     , vector-space >= 0.9
                     , friday >= 0.2
                     , friday-devil >= 0.1
                     , pipes >= 4.1
                     , directory >= 1.2
                     , filepath >= 1.3
                     , vector >= 0.10
                     , MonadRandom >= 0.3
                     , mmorph >= 1.0
                     , cereal >= 0.4 
                     , bytestring >= 0.10
                     , deepseq >= 1.3
                     , time >= 1.4
                     , classy-prelude >= 0.12
                     , lens >= 4.13
  default-language:    Haskell2010
  default-extensions:  ScopedTypeVariables
  extra-libraries:     hnn_cubits
                     , cudnn
                     , curand
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

test-suite deep-banana-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Test.DeepBanana.Layer.CUDA
                     , Test.DeepBanana.Layer.Numeric
                     , Test.DeepBanana.Layer.NumericGrad
                     , Test.DeepBanana.Layer.Recurrent
                     , Test.DeepBanana.Layer.LSTM
                     , Test.DeepBanana.Tensor
  build-depends:       base >= 4.7
                     , deep-banana >= 0.1
                     , hcudnn >= 0.1 
                     , hcurand >= 0.1
                     , hspec >= 2.1
                     , vector-space >= 0.9
                     , mtl >= 2.1
                     , HList >= 0.4
                     , vector >= 0.10
                     , cuda >= 0.7
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  extensions:          ScopedTypeVariables
                     , TypeFamilies
                     , DataKinds
                     , TypeOperators
                     , PolyKinds
                     , FlexibleContexts
                     , FlexibleInstances

executable example-mnist
  hs-source-dirs:      examples/mnist/
  main-is:             Main.hs
  other-modules:       MNIST
  default-language:    Haskell2010
  build-depends:       base >= 4.7
                     , deep-banana >= 0.1
                     , pipes >= 4.1
                     , filepath >= 1.3
                     , parsec >= 3.1
                     , bytestring >= 0.10
                     , mtl >= 2.1
                     , wreq >= 0.4
                     , directory >= 1.2
                     , network-uri >= 2.6
                     , friday >= 0.2
                     , friday-devil >= 0.1
                     , zlib >= 0.6
                     , lens >= 4.13
                     , attoparsec >= 0.13
                     , binary >= 0.7
                     , vector >= 0.11
                     , HList >= 0.4
                     , deepseq >= 1.3
                     , mmorph >= 1.0
                     , cuda >= 0.7
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  extensions:          NoImplicitPrelude

executable example-tatoeba
  
  hs-source-dirs:      examples/tatoeba/
  main-is:             Main.hs
  other-modules:       Tatoeba
  default-language:    Haskell2010
  build-depends:       base >= 4.7
                     , deep-banana >= 0.1
                     , pipes >= 4.1
                     , filepath >= 1.3
                     , parsec >= 3.1
                     , bytestring >= 0.10
                     , mtl >= 2.1
                     , wreq >= 0.4
                     , directory >= 1.2
                     , network-uri >= 2.6
                     , friday >= 0.2
                     , friday-devil >= 0.1
                     , bzlib >= 0.5
                     , lens >= 4.13
                     , attoparsec >= 0.13
                     , binary >= 0.7
                     , vector >= 0.11
                     , HList >= 0.4
                     , deepseq >= 1.3
                     , mmorph >= 1.0
                     , cuda >= 0.7
                     , cereal >= 0.4
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  extensions:          NoImplicitPrelude
                     , OverloadedStrings
                     , FlexibleContexts
                     , ScopedTypeVariables
                     , TypeFamilies
                     , DataKinds
                     , TypeOperators
                     , PolyKinds
                     , DeriveGeneric
source-repository head
  type:     git
  location: https://github.com/alexisVallet/hnn
